welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: ')' expected but '<-' found.
	for (n <- 90 to 110 || n <- 190 to 210) { 
                                 ^nearHundred:6: error: illegal start of simple expression
} 
^