welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	for (n <- 90 to 110 || n <- 190 to 210) { 
    	return true;
	}
	return false;
}